--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -40,7 +40,7 @@ jobs:
       - name: 运行js脚本
         run: |
           yarn
-          node ./upload.js --endPoint=$MINIO_ENDPOINT --accessKey=$MINIO_ACCESS_KEY --secretKey=$MINIO_SECRET_KEY
+          node ./upload.js $MINIO_ENDPOINT $MINIO_ACCESS_KEY $MINIO_SECRET_KEY
         env:
           MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
           MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
