--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -40,7 +40,7 @@ jobs:
       - name: 运行js脚本
         run: |
           yarn
-          node ./upload.js $MINIO_ENDPOINT $MINIO_ACCESS_KEY $MINIO_SECRET_KEY
+          node ./upload.js ${{ secrets.MINIO_ENDPOINT }} ${{ secrets.MINIO_ACCESS_KEY }} ${{ secrets.MINIO_SECRET_KEY }}
         env:
           MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
           MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
