--- a/.github/workflows/minio.yml
+++ b/.github/workflows/minio.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           yarn
           node ./upload.js ${{ secrets.MINIO_ENDPOINT }} ${{ secrets.MINIO_ACCESS_KEY }} ${{ secrets.MINIO_SECRET_KEY }}
+          echo ${{ secrets.MINIO_ENDPOINT }}
         env:
           MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
           MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
